# src/routes/order.routes.js
@@ -2,6 +2,7 @@ const router = require('express-promise-router')();
 const orderController = require('../controllers/order.controller');
 
 router.get('/order', orderController.getOrdersList);
+router.get('/order/currMonth', orderController.getOrdersListCurrMonth);
 router.get('/order/:id', orderController.getOrderById);
 router.get('/order/period/:start/:end', orderController.getOrdersListByPeriod);
 router.post('/order', orderController.createOrder);
